--- a/styles/Earthliness.css
+++ b/styles/Earthliness.css
@@ -6,13 +6,12 @@
   --secondary: #d4dfca;
   --accent: #81B18C;
   --background: #e8efe1;
-  --surface: #464343;
+  --surface: #575757;
   --on-primary: #181818;
   --on-secondary: #333333;
-  --on-accent: #050505;
+  --on-accent: 5, 5, 5;
   --on-background: #fefefe;
   --on-surface: #fefefe;
-  --on-disabled: rgba(155, 155, 155, 0.8);
 }
 .dk-theme {
   --primary: #000000;
@@ -21,9 +20,8 @@
   --background: #202918;
   --surface: #000000;
   --on-primary: #ffffff;
-  --on-secondary: #bcb9b9;
-  --on-accent: #fefefe;
-  --on-background: #bcb9b9;
+  --on-secondary: #c7c7c7;
+  --on-accent: 254, 254, 254;
+  --on-background: #ececec;
   --on-surface: #bcb9b9;
-  --on-disabled: rgba(155, 155, 155, 0.8);
 }
