--- a/styles/Simplicity.css
+++ b/styles/Simplicity.css
@@ -4,26 +4,24 @@
 .lt-theme {
   --primary: rgba(255, 255, 255, 1);
   --secondary: #f7f7f7;
-  --accent: rgba(180, 83, 9);
+  --accent: rgba(230, 85, 40);
   --background: rgb(250, 250, 250);
   --surface: rgba(255, 255, 255, 1);
   --on-primary: rgba(28, 29, 31, 0.8);
   --on-secondary: rgba(28, 29, 31, 0.8);
-  --on-accent: rgb(225, 225, 225);
+  --on-accent: 28, 29, 31;
   --on-background: rgba(28, 29, 31, 0.8);
   --on-surface: rgba(28, 29, 31, 0.8);
-  --on-disabled: rgba(110, 110, 110, 0.8);
 }
 .dk-theme {
   --primary: rgb(25, 25, 25);
   --secondary: rgb(28, 28, 28);
-  --accent: rgb(180, 83, 9);
+  --accent: rgba(230, 85, 40);
   --background: rgb(32, 32, 32);
   --surface: rgb(40, 40, 40);
   --on-primary: rgba(225, 225, 225, 0.8);
   --on-secondary: rgba(225, 225, 225, 0.8);
-  --on-accent: rgba(255, 255, 255, 1);
+  --on-accent: 255, 255, 255;
   --on-background: rgba(225, 225, 225, 0.8);
   --on-surface: rgba(225, 225, 225, 0.8);
-  --on-disabled: rgba(110, 110, 110, 0.8);
 }
