--- a/assets/color-scheme.css
+++ b/assets/color-scheme.css
@@ -6,7 +6,7 @@
   --secondary: #d4dfca;
   --accent: #81B18C;
   --background: #e8efe1;
-  --surface: #3f3f3f;
+  --surface: #141610;
   --on-primary: #181818;
   --on-secondary: #333333;
   --on-accent: 5, 5, 5;
