Icons + color-scheme.

--- a/assets/tailwind.global.css
+++ b/assets/tailwind.global.css
@@ -2,9 +2,9 @@
 
 @import url("https://fontlibrary.org//face/monoid");
 
-@import url("/assets/icons8/css/line-awesome.min.css");
+@import url("icons8/css/line-awesome.min.css");
 
-@import url("/assets/color-scheme.css");
+@import url("color-scheme.css");
 
 /*! tailwindcss v2.2.4 | MIT License | https://tailwindcss.com */
 
