--- a/styles/tailwind.source.css
+++ b/styles/tailwind.source.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500&display=swap");
 @import url("https://fontlibrary.org//face/monoid");
-@import url("/assets/icons8/css/line-awesome.min.css");
-@import url("/assets/color-scheme.css");
+@import url("icons8/css/line-awesome.min.css");
+@import url("color-scheme.css");
 
 @tailwind base;
 @tailwind components;
